--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
-PyQt5>=5.15.0
-pandas>=1.0.0
-numpy>=1.18.0
-PyPDF2>=2.0.0
-tabula-py>=2.0.0
-JPype1>=1.2.0
-openpyxl>=3.0.0
-pyinstaller>=6.0.0
-setuptools>=42.0.0 
+Flask==2.2.5
+Werkzeug==2.2.3
+pandas==2.0.3
+numpy==1.24.3
+matplotlib==3.7.2
+pdfplumber==0.10.2
+reportlab==4.0.4
+streamlit==1.32.0
+plotly==5.18.0
+python-dateutil==2.8.2
+jinja2==3.1.2
+Pillow==10.0.0
+PyQt5==5.15.9
+PyPDF2==3.0.1
+tabula-py==2.7.0
+scikit-learn==1.3.0 
